Refactor styles and update project dependencies
- Update SCSS files to improve styles in components and layout
- Update DropMenu component and main page (index.vue)
- Update package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@hypernym/nuxt-gsap": "^2.4.3",
     "@iconify-json/entypo-social": "^1.2.2",
     "@iconify-json/logos": "^1.2.4",
+    "@iconify-json/mdi": "^1.2.3",
     "@nuxt/icon": "^1.13.0",
     "postcss-html": "^1.8.0",
     "sass": "^1.89.0",
