--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/sanity": "^1.13.3",
     "@pinia/nuxt": "^0.11.0",
     "@vue/devtools-api": "^7.7.7",
+    "compression": "^1.8.0",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.3",
     "nuxt-mail": "^6.0.2",
