--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@iconify-json/logos": "^1.2.4",
     "@iconify-json/mdi": "^1.2.3",
     "@nuxt/icon": "^1.13.0",
+    "@types/compression": "^1.8.1",
     "postcss-html": "^1.8.0",
     "sass": "^1.89.0",
     "stylelint": "^16.19.1",
