--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@pinia/nuxt": "^0.11.0",
     "@vue/devtools-api": "^7.7.7",
     "eslint": "^9.27.0",
+    "h3-compression": "^0.3.2",
     "nuxt": "^3.17.3",
     "nuxt-mail": "^6.0.2",
     "nuxt-typedjs": "^1.2.0",
