--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "nuxt build && npm run archive",
+    "archive": "zip -r output.zip .output",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -18,6 +19,7 @@
     "@nuxt/image": "^1.10.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/sanity": "^1.13.3",
+    "@nuxtjs/sitemap": "^7.4.3",
     "@pinia/nuxt": "^0.11.0",
     "@vue/devtools-api": "^7.7.7",
     "eslint": "^9.27.0",
